--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.1",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "bootstrap": "^5.3.3",
     "compression": "^1.8.0",
     "express": "^4.18.2",
